# Macchina-J2534

./: .gitignore  README.md
driver/: .gitignore  Cargo.toml  README.md  WIN_DRIVER.reg  build.bat  build.rs  build.sh  driver.def  driver_a0.reg  driver_m2.reg  macchina_a0.json  macchina_m2.json
driver/src/: channels.rs  comm.rs  ioctl.rs  lib.rs  lib_tests.rs  logger.rs  passthru_drv.rs
firmware/: MACCHINA_CONFIG.h  can_common.cpp  can_common.h  channel.cpp  channel.h  comm.h  comm_a0.cpp  comm_channel_can.cpp  comm_channel_iso15765.cpp  comm_channel_iso9141.cpp  comm_channels.cpp  comm_channels.h  comm_m2.cpp  custom_can.cpp  custom_can.h  due_can.cpp  due_can.h  firmware.ino  j2534_mini.h  pt_device.h  pt_device_a0.cpp  pt_device_m2.cpp
