[package]
name = "macchina_pt_driver"
version = "0.5.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
M2=[]
A0=[]

[lib]
crate-type = ["cdylib"]


[dependencies]
libc = "0.2.80"
j2534_rust = "1.5.0"
serde_json="1.0.58"
lazy_static="1.4.0"
byteorder="1.3.4"
serialport={git="https://github.com/rnd-ash/serialport-rs"}

[dev-dependencies]
rand = "0.7.3"

[target.'cfg(windows)'.dependencies]
winreg="0.7.0"

[target.'cfg(unix)'.dependencies]
shellexpand="2.0.0"

[target."cfg(windows)".dependencies.winapi]
version = "0.3.9"
features = ["cguid", "commapi", "errhandlingapi", "fileapi", "guiddef", "handleapi", "minwinbase",
            "minwindef", "ntdef", "setupapi", "winbase", "winerror", "winnt", "ioapiset", "synchapi"]

[profile.release]
debug = true


